dark mode 2 Loader fix

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -49,6 +49,7 @@ Loader
     font-size: 4.5rem;
     opacity: 0;
     pointer-events: none;
+    color: #fff;
 }
 
 /* -------------------------------------------
